# streamer-scripts

./: README.md
discord-bot/: .gitignore  Cargo.toml
discord-bot/src/: discord.rs  main.rs
discord-bot/src/discord/: types.rs
spotify-now-playing/: Cargo.toml
spotify-now-playing/src/: main.rs
