[package]
name = "discord-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
clap = { version = "4.5.38", features = ["derive"] }

[[bin]]
name = "discord"
path = "src/main.rs"
test = false
bench = false
