[package]
name = "spotify-now-playing"
version = "0.1.0"
edition = "2024"

[dependencies]
# dotenv = "0.15.0"
# reqwest = "0.12.15"
# rouille = "3.6.2"
# serde = "1.0.219"
# spotify-rs = "0.4.0"
# tokio = "1.45.0"
tokio = { version = "1.45.0", features = ["full"] }
windows = { version = "0.61.1", features = [
    "ApplicationModel",
    "Media_Control",
    "Storage_Streams",
] }
